fix: remove prebuild script to prevent double fetch-events execution

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "fetch-events": "node scripts/fetch-events.js",
-    "get-token": "node scripts/get-meetup-token.js",
-    "prebuild": "npm run fetch-events"
+    "get-token": "node scripts/get-meetup-token.js"
   },
   "dependencies": {
     "react": "^18.3.1",
