--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .meetup-refresh-token
-          git diff --quiet && git diff --staged --quiet || git commit -m "chore: update Meetup refresh token [skip ci]"
+          git diff --staged --quiet || git commit -m "chore: update Meetup refresh token [skip ci]"
           git push || echo "No changes to push"
 
       - name: Build website
