--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "get-token": "node scripts/get-meetup-token.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
